# rusty_marvin

./: Cargo.toml  PROJECT_README.md  README.md
api/: Cargo.toml
api/src/: card.rs  deck.rs  hand.rs  lib.rs
api/tests/: card_test.rs  deck_tests.rs  hand_test.rs
bots/: README.md
core/: Cargo.toml  README.md
core/src/: hand_evaluator.rs  lib.rs  simple_player.rs  toml_preferences.rs
core/src/api/: action.rs  card.rs  deck.rs  game_info.rs  game_observer.rs  hand.rs  hand_eval.rs  mod.rs  player.rs  player_info.rs  preferences.rs
core/src/evaluator_generator/: flushes.rs  mod.rs  pair.rs  products.rs  state_table_generator.rs  unique.rs  values.rs
core/src/texas_holdem/: mod.rs
core/tests/: api_integration_test.rs  hand_eval_integration_test.rs  mod.rs  unit_tests.rs
core/tests/helpers/: hand_encoder.rs  hand_eval.rs  mod.rs
docs/: ACHIEVEMENTS.md  ROADMAP.md  VISION.md  api.md  developer_guide.md  user_guide.md
holdem_core/: Cargo.toml  README.md
holdem_core/proptest-regressions/evaluator/: property_tests.txt
holdem_core/src/: board.rs  card.rs  deck.rs  errors.rs  hand.rs  hole_cards.rs  lib.rs
holdem_core/src/evaluator/: benchmarks.rs  errors.rs  evaluator.rs  examples.rs  file_io.rs  integration.rs  mod.rs  property_tests.rs  singleton.rs  tables.rs
holdem_core/tests/: integration_tests.rs  property_tests.rs
math/proptest-regressions/evaluator/: property_tests.txt
simulator/: README.md
