[package]
name = "poker-api"
version = "0.1.0"
edition = "2021"
authors = ["Poker API Team"]
description = "High-performance poker hand evaluation library based on the Meerkat API algorithm"
readme = "README.md"
license = "MIT"
repository = "https://github.com/your-org/poker-api"
documentation = "https://docs.rs/poker-api"
homepage = "https://github.com/your-org/poker-api"
keywords = ["poker", "hand-evaluation", "texas-holdem", "gaming", "cards"]
categories = ["games", "api-bindings", "mathematics"]
exclude = ["docs/*", "target/*", "*.md"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.0"
toml = "0.8.20"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
