[package]
name = "poker-api"
version = "0.1.0"
edition = "2021"
authors = ["Jan-Peter v. Hunnius"]
description = "Java-compatible poker hand evaluation library for bot testing frameworks - implements Meerkat API algorithm with full Java compatibility for poker bot development and testing"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jhunnius/rusty_marvin"
documentation = "https://docs.rs/poker-api"
homepage = "https://github.com/your-org/poker-api"
keywords = ["poker", "bot-testing", "hand-evaluation", "texas-holdem", "meerkat-api", "poker-bots", "testbed", "gaming", "cards"]
categories = ["games", "api-bindings", "mathematics"]
exclude = ["docs/*", "target/*", "*.md"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.0"
toml = "0.8.20"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
